[package]
name = "hackernews_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
hackernewsapi = { git = "https://github.com/joseyose/hackernewsapi", branch = "main" }
tokio = { version = "1.33.0", features = ["full"] }
